--- a/scss/carousel.scss
+++ b/scss/carousel.scss
@@ -1,4 +1,4 @@
 .carousel-container {
-    height: 577px;
+    height: 60vh;
     background: center/ cover no-repeat url('../images/carousel_bg.jpg');
 }
