--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,13 +1,42 @@
+$headerHeight:155px;
+$headerMiniHeight: 100px;
+$miniTransitionSpeed:.5s;
+$fullTransitionSpeed:.2s;
+.header-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: $headerHeight;
+    width: 100%;
+    background-color: #FFFFFF;
+    box-shadow: 0 2px 4px 0 rgba(68, 68, 68, 0.5);
+    z-index: 100;
+    transition: height $fullTransitionSpeed;
+    &.mini {
+        height: $headerMiniHeight;
+        transition: height $miniTransitionSpeed;
+        .logo-container .header-logo {
+            width: 100px;
+        }
+        .menu-list {
+            margin: 30px 0 0 0;
+        }
+    }
+}
+
 .header-wrapper {
-    height: 155px;
+    height: 100%;
 }
 
 // Logo
-.logo-container {
-    float: left;
-    .header-logo {
-        margin: 22px 0px 14px 29px;
-        width: 211px;
+.header-container {
+    .logo-container {
+        float: left;
+        .header-logo {
+            margin: 22px 0px 14px 29px;
+            width: 211px;
+            transition: width $miniTransitionSpeed;
+        }
     }
 }
 
@@ -16,19 +45,51 @@
     float: right;
 }
 
-.menu-list {
-    height: 155px;
-    line-height: 155px;
-    padding: 0 32px 0 0;
-    margin: 0;
-    list-style: none;
-    .menu-item {
-        float: left;
-        margin-left: 24px;
-        font-size: 24px;
-        letter-spacing: -0.2px;
-        font-weight: 300;
-        color: #494949;
-        cursor:pointer;
+.header-container {
+    .menu-list {
+        padding: 0 32px 0 0;
+        margin: 58px 0 0 0;
+        list-style: none;
+        transition: margin $miniTransitionSpeed;
+        .menu-item {
+            float: left;
+            margin-left: 24px;
+            font-size: 24px;
+            letter-spacing: -0.2px;
+            font-weight: 300;
+            color: #494949;
+            .menu-goto-section {
+                cursor: pointer;
+            }
+            .menu-hover-id {
+                height: 4px;
+                margin-top: 2px;
+                background: linear-gradient(to right, #273b65, #67c5b3, #273b65);
+                opacity: 0;
+            }
+            &:hover {
+                .menu-hover-id {
+                    opacity: 1;
+                    transition: opacity .5s;
+                }
+            }
+        }
+    }
+}
+
+// fix me - use global variable
+@media(max-width: 740px) {
+    .header-container {
+        height: $headerMiniHeight;
+        transition: height $miniTransitionSpeed;
+        .logo-container .header-logo {
+            width: 100px;
+        }
+        .menu-list {
+            margin: 30px 0 0 0;
+            .menu-item {
+                font-size: 20px;
+            }
+        }
     }
 }
