updated with variables + mobile styles

--- a/scss/carousel.scss
+++ b/scss/carousel.scss
@@ -1,11 +1,12 @@
+@import './variables.scss';
+
 .carousel-container {
     margin-top: 155px;
     height: 60vh;
     background: center/ cover no-repeat url('../images/carousel_bg.jpg');
 }
 
-// fix me - use global variable
-@media(max-height: 740px) {
+@media(max-width: $media-tablet-width) {
     .carousel-container {
         margin-top: 100px;
     }
