--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 .contact-heading {
     height: 194px;
     line-height: 194px;
@@ -30,5 +31,12 @@
         p {
             margin: 0;
         }
+    }
+}
+
+@media(max-width: $media-lg-mobile-width) {
+    .contact-table .contact-wrapper {
+        float: left;
+        width: 100%;
     }
 }
