--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,6 +1,7 @@
 .footer {
     height: 56px;
     line-height: 56px;
+    width: 100%;
     color: #FFFFFF;
     font-size: 18px;
     font-weight: 300;
