--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,7 +1,5 @@
-$headerHeight:155px;
-$headerMiniHeight: 100px;
-$miniTransitionSpeed:.5s;
-$fullTransitionSpeed:.2s;
+@import './colors.scss';
+@import './variables.scss';
 .header-container {
     position: fixed;
     top: 0;
@@ -45,40 +43,125 @@ $fullTransitionSpeed:.2s;
     float: right;
 }
 
+// hamburger
 .header-container {
-    .menu-list {
-        padding: 0 32px 0 0;
-        margin: 58px 0 0 0;
-        list-style: none;
-        transition: margin $miniTransitionSpeed;
-        .menu-item {
-            float: left;
-            margin-left: 24px;
-            font-size: 24px;
-            letter-spacing: -0.2px;
-            font-weight: 300;
-            color: #494949;
-            .menu-goto-section {
-                cursor: pointer;
+    .mobile-nav {
+        float: right;
+        display: none;
+        #nav-icon {
+            position: relative;
+            width: 30px;
+            height: 30px;
+            margin-top: 35px;
+            right: 15px;
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+            -webkit-transition: .5s ease-in-out;
+            -moz-transition: .5s ease-in-out;
+            -o-transition: .5s ease-in-out;
+            transition: .5s ease-in-out;
+            cursor: pointer;
+            span {
+                display: block;
+                position: absolute;
+                height: 5px;
+                width: 100%;
+                background: $color-brand-1;
+                border-radius: 9px;
+                opacity: 1;
+                left: 0;
+                -webkit-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transition: .25s ease-in-out;
+                -moz-transition: .25s ease-in-out;
+                -o-transition: .25s ease-in-out;
+                transition: .25s ease-in-out;
+                &:nth-child(1) {
+                    top: 0px;
+                }
+                &:nth-child(2),
+                &:nth-child(3) {
+                    top: 10px
+                }
+                &:nth-child(4) {
+                    top: 20px;
+                }
             }
-            .menu-hover-id {
-                height: 4px;
-                margin-top: 2px;
-                background: linear-gradient(to right, #273b65, #67c5b3, #273b65);
-                opacity: 0;
-            }
-            &:hover {
-                .menu-hover-id {
-                    opacity: 1;
-                    transition: opacity .5s;
+        }
+        &.open {
+            #nav-icon span {
+                &:nth-child(1) {
+                    top: 18px;
+                    width: 0%;
+                    left: 50%;
+                }
+                &:nth-child(2) {
+                    -webkit-transform: rotate(45deg);
+                    -moz-transform: rotate(45deg);
+                    -o-transform: rotate(45deg);
+                    transform: rotate(45deg);
+                }
+                &:nth-child(3) {
+                    -webkit-transform: rotate(-45deg);
+                    -moz-transform: rotate(-45deg);
+                    -o-transform: rotate(-45deg);
+                    transform: rotate(-45deg);
+                }
+                &:nth-child(4) {
+                    top: 18px;
+                    width: 0%;
+                    left: 50%;
                 }
             }
         }
     }
 }
 
-// fix me - use global variable
-@media(max-width: 740px) {
+.menu-list {
+    padding: 0 32px;
+    margin: 58px 0 0 0;
+    list-style: none;
+    transition: margin $miniTransitionSpeed;
+    .menu-item {
+        float: left;
+        margin-left: 24px;
+        cursor: pointer;
+        &:nth-child(1) {
+            margin-left: 0;
+        }
+        .menu-link {
+            font-size: 24px;
+            letter-spacing: -0.2px;
+            font-weight: 300;
+            color: $color-text-default;
+            text-decoration: none;
+        }
+        .menu-hover-id {
+            height: 4px;
+            margin-top: 2px;
+            background: linear-gradient(to right, #273b65, #67c5b3, #273b65);
+            opacity: 0;
+        }
+        &.selected .menu-hover-id {
+            height: 4px;
+            margin-top: 2px;
+            background: linear-gradient(to right, #273b65, #67c5b3, #273b65);
+            opacity: 1;
+        }
+        &:hover {
+            .menu-hover-id {
+                opacity: 1;
+                transition: opacity .5s;
+            }
+        }
+    }
+}
+
+@media(max-width: $media-tablet-width) {
     .header-container {
         height: $headerMiniHeight;
         transition: height $miniTransitionSpeed;
@@ -87,9 +170,66 @@ $fullTransitionSpeed:.2s;
         }
         .menu-list {
             margin: 30px 0 0 0;
-            .menu-item {
+            .menu-link {
                 font-size: 20px;
             }
         }
+    }
+}
+
+@media(max-width: $media-lg-mobile-width) {
+    .header-container {
+        .mobile-nav {
+            display: block;
+        }
+        .menu-list {
+            margin: 0;
+            padding: 0;
+            background-color: #FFFFFF;
+            max-height: 0;
+            transition: max-height 1s;
+            .menu-item {
+                max-height: 0;
+                width: 100%;
+                margin: 0;
+                transition: max-height .1s;
+            }
+            .menu-link {
+                font-size: 0;
+                opacity: 0;
+                transition: opacity .5s;
+            }
+            .menu-hover-id {
+                display: none;
+            }
+            .btn-book {
+                height: 0;
+                opacity: 0; //transition: opacity .1s;
+            }
+            &.open {
+                max-height: 500px;
+                padding: 29px;
+                transition: max-height 1s;
+                .menu-item {
+                    max-height: 50px;
+                }
+                .menu-link {
+                    display: block;
+                    width: 100%;
+                    margin: 10px 0;
+                    font-size: 20px;
+                    opacity: 1;
+                    transition: opacity 1s;
+                }
+                .btn-book {
+                    height: 39px;
+                    opacity: 1;
+                    transition: opacity 1s;
+                }
+            }
+        }
+    }
+    .menu-container {
+        float: none;
     }
 }
