--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,4 +1,14 @@
+// general
+$color-white:#FFFFFF;
 // typography
 $color-text-default:#494949;
 // brand
-$color-brand-1:#273b65;
+$color-brand-main:#284670;
+// menu
+$color-text-link: #E2F1F2;
+$color-hover-id:#3C8FA6;
+// button
+$color-btn-bg:#3C8FA6;
+$color-btn-border: #3C8FA6;
+//footer
+$color-footer-bg:#3C8FA6;
