--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 .footer {
     height: 56px;
     line-height: 56px;
@@ -6,7 +7,7 @@
     font-size: 18px;
     font-weight: 300;
     text-align: center;
-    background-color: #094B7D;
+    background-color: $color-footer-bg;
     a {
         color: #FFFFFF;
     }
