--- a/scss/master.scss
+++ b/scss/master.scss
@@ -17,11 +17,8 @@ body {
 @import './button.scss';
 @import './carousel.scss';
 @import './content.scss';
-@import './firsttime.scss';
-@import './explore.scss';
-@import './amenities.scss';
-@import './feel.scss';
 @import './join.scss';
+@import './services.scss';
 @import './package.scss';
 @import './contact.scss';
 @import './footer.scss';
