--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -7,6 +7,14 @@ $color-brand-main:#284670;
 // menu
 $color-text-link: #E2F1F2;
 $color-hover-id:#3C8FA6;
+//content
+$color-content-bg: #f7fbff;
+// service menu / packages
+$color-services-bg:#39819A;
+$color-services-border:#39819A;
+// hydro
+$color-hydro-header-text:#39819A;
+$color-hydro-benefit-bg:#39819A;
 // button
 $color-btn-bg:#3C8FA6;
 $color-btn-border: #3C8FA6;
