--- a/scss/content.scss
+++ b/scss/content.scss
@@ -1,7 +1,8 @@
 @import './variables.scss';
-
+@import './colors.scss';
 .body-content-container {
-    margin-top: 155px;   
+    background-color: $color-content-bg;
+    margin-top: 155px;
 }
 
 @media(max-width: $media-tablet-width) {
