--- a/scss/master.scss
+++ b/scss/master.scss
@@ -20,5 +20,6 @@ body {
 @import './join.scss';
 @import './services.scss';
 @import './package.scss';
+@import './hydromassage.scss';
 @import './contact.scss';
 @import './footer.scss';
