--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,6 +1,7 @@
 // Media queries
 $media-tablet-width: 820px;
 $media-lg-mobile-width: 670px;
+$media-sm-mobile-width: 420px;
 // Header
 $headerHeight:155px;
 $headerMiniHeight: 100px;
