--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -15,6 +15,7 @@ $color-services-border:#39819A;
 // hydro
 $color-hydro-header-text:#39819A;
 $color-hydro-benefit-bg:#39819A;
+$color-services-benefit-bg:#39819A;
 // button
 $color-btn-bg:#3C8FA6;
 $color-btn-border: #3C8FA6;
