--- a/scss/button.scss
+++ b/scss/button.scss
@@ -38,10 +38,12 @@ $btn-book-height: 48px;
 // carousel btn
 .carousel-btn-wrapper {
     .btn-carousel {
+        display:inline-block;
         font-size: 24px;
         font-weight: 600;
         color: #F7FBFF;
         height: 70px;
+        line-height: 70px;
         padding: 0 56px;
         border-radius: 26px;
         box-shadow: 0 1px 4px 0 rgba(36, 36, 37, .54);
