--- a/scss/master.scss
+++ b/scss/master.scss
@@ -6,7 +6,7 @@ body {
     padding: 0;
     margin: 0;
     height: 100%;
-    background-color: #F7BFFF;
+    background-color: #F7FBFF;
 }
 
 // test
