--- a/scss/services.scss
+++ b/scss/services.scss
@@ -164,7 +164,7 @@
 // benefit table images
 .services-benefits {
     &.hydro-chair-img {
-        background: center/cover no-repeat url('../images/hydro_chair.png');
+        background: center/cover no-repeat url('../images/hydro_chair.jpg');
     }
 }
 
@@ -195,7 +195,7 @@
         background: center/cover no-repeat url('../images/float_benefit_img_1.jpg');
     }
     &.float-benefit-img-2 {
-        background: center/cover no-repeat url('../images/carousel_bg.jpg');
+        background: center/cover no-repeat url('../images/float_benefit_img_2.jpg');
     }
     &.float-benefit-img-3 {
         position: relative;
